# alphabot307-v1

./: README.md  backlog.xlsx  Диаграмма последовательности для прецедентов.txt  Диаграмма прецедентов.txt
UML-diagrams/: Диаграмма классов.txt  Концептуальная модель.txt
Utils/: Application.cpp  Application.h  CMakeLists.txt  Camera.h  Drink.h  Order.h  Robot.cpp  Robot.h  Server.cpp  Server.h  Student.cpp  main.cpp  motor.cpp  motor.h
Utils/src/: Application.cpp  Application.h  Camera.cpp  Drink.cpp  Drink.h  IRobot.h  IServer.h  MosquittoClient.cpp  MosquittoClient.h  Order.cpp  Order.h  Robot.cpp  Robot.h  Server.cpp  Server.h  Student.cpp  Student.h
src/: README.md
src/client/: CMakeLists.txt  image_recognition.py  main_client.py  robot.cpp  robot_commander.py
src/client/include/: command_processor.h  common.h  motion_controller.h  network_handler.h  pip_manager.h
src/client/src/: command_processor.cpp  main.cpp  motion_controller.cpp  network_handler.cpp  pip_manager.cpp
src/server/: camera_manager.py  common_defs.py  config.py  engine_controller.py  main_server.py  mqtt_client_handler.py  robot_commander.py  utils.py  vision_processor.py
