cmake_minimum_required(VERSION 3.29)
project(_1)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        main.cpp
        Student.cpp
        Student.h
        Application.cpp
        Application.h
        Camera.cpp
        Camera.h
        Drink.h
        Order.h
        Robot.cpp
        Robot.h
        Server.cpp
        Server.h
)